[gd_scene load_steps=9 format=2]

[ext_resource path="res://Gardener.png" type="Texture" id=1]
[ext_resource path="res://Gardener.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "WalkDown"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 8, 12 ]
}

[sub_resource type="Animation" id=3]
resource_name = "WalkLeft"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 7, 11, 15 ]
}

[sub_resource type="Animation" id=2]
resource_name = "WalkRight"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 5, 9, 13 ]
}

[sub_resource type="Animation" id=4]
resource_name = "WalkUp"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 6, 10, 14 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7.56691, 7.51477 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7.22261, 7.16402 )

[node name="Gardener" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.352531, -13.849 )
texture = ExtResource( 1 )
vframes = 4
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/WalkDown = SubResource( 1 )
anims/WalkLeft = SubResource( 3 )
anims/WalkRight = SubResource( 2 )
anims/WalkUp = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="CanGoUp" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanGoUp"]
position = Vector2( 0.0216537, -15.5007 )
shape = SubResource( 6 )

[node name="CanGoDown" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanGoDown"]
position = Vector2( 0.0216537, 15.4478 )
shape = SubResource( 6 )

[node name="CanGoLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanGoLeft"]
position = Vector2( -15.2202, 0.146361 )
shape = SubResource( 6 )

[node name="CanGoRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanGoRight"]
position = Vector2( 15.1732, -0.12865 )
shape = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="CanGoUp" to="." method="_on_CanGoUp_body_entered"]
[connection signal="body_exited" from="CanGoUp" to="." method="_on_CanGoUp_body_exited"]
[connection signal="body_entered" from="CanGoDown" to="." method="_on_CanGoDown_body_entered"]
[connection signal="body_exited" from="CanGoDown" to="." method="_on_CanGoDown_body_exited"]
[connection signal="body_entered" from="CanGoLeft" to="." method="_on_CanGoLeft_body_entered"]
[connection signal="body_exited" from="CanGoLeft" to="." method="_on_CanGoLeft_body_exited"]
[connection signal="body_entered" from="CanGoRight" to="." method="_on_CanGoRight_body_entered"]
[connection signal="body_exited" from="CanGoRight" to="." method="_on_CanGoRight_body_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
